Update openapi stuff